--- a/Inventory/ApplicationCore/ApplicationCore.csproj
+++ b/Inventory/ApplicationCore/ApplicationCore.csproj
@@ -8,4 +8,18 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Inventory\Commands\" />
+    <Folder Include="Store_cq\Commands\" />
+    <Folder Include="Supplier\" />
+    <Folder Include="PurchaseOrder\Commands\" />
+    <Folder Include="PurchaseOrder\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
