--- a/Inventory/ApplicationCore/ApplicationCore.csproj
+++ b/Inventory/ApplicationCore/ApplicationCore.csproj
@@ -10,10 +10,8 @@
 
   <ItemGroup>
     <Folder Include="Inventory\Commands\" />
-    <Folder Include="Store_cq\Commands\" />
     <Folder Include="Supplier\" />
-    <Folder Include="PurchaseOrder\Commands\" />
-    <Folder Include="PurchaseOrder\Queries\" />
+    <Folder Include="PurchaseOrder_cq\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
